<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_above="@+id/rg_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <RadioGroup
        android:background="@color/color_main"
        android:id="@+id/rg_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_home"
            style="@style/rb_style"
            android:drawableTop="@drawable/rb_home_selector"
            android:text="@string/rb_home_text"
            />

        <RadioButton
            android:id="@+id/rb_objects"
            style="@style/rb_style"
            android:drawableTop="@drawable/rb_newscenter_selector"
            android:text="@string/rb_objects_text"/>

        <RadioButton
            android:id="@+id/rb_search"
            style="@style/rb_style"
            android:drawableTop="@drawable/rb_search_selector"
            android:text="@string/rb_search_text"/>

        <RadioButton
            android:id="@+id/rb_setting"
            style="@style/rb_style"
            android:drawableTop="@drawable/rb_setting_selector"
            android:text="@string/rb_setting_text"/>

    </RadioGroup>
</RelativeLayout>
