<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white">

    <TextView
        android:id="@+id/tv_setting_titleBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/color_main"
        android:gravity="center"
        android:text="@string/tv_setting_titleBar_text"
        android:textColor="@android:color/white"
        android:textSize="16sp"/>

    <LinearLayout
        android:id="@+id/ll_setting_inform"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/tv_setting_titleBar"
        android:gravity="center"
        android:orientation="vertical">

        <com.mathor.technologypolicy.view.RoundCornersImageView
            android:id="@+id/rciv_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="fitXY"
            android:src="@mipmap/iv_icon2_round"/>

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="点击登录"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_setting_inform"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#11000000"/>

        <TextView
            android:id="@+id/tv_setting_interaction"
            style="@style/tv_setting_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/news_cate_arr"
            android:text="@string/tv_setting_interaction_text"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#11000000"/>

        <LinearLayout
            android:id="@+id/ll_setting_cache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/tv_setting_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_setting_cache_text"/>

            <TextView
                android:id="@+id/tv_setting_cache"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/bg_tv_setting_interaction"
                android:gravity="end"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:textSize="14sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#11000000"/>

        <TextView
            android:id="@+id/tv_setting_tuisong"
            style="@style/tv_setting_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/news_cate_arr"
            android:text="@string/tv_setting_tuisong_text"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#11000000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_setting_version"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#11000000"/>

        <TextView
            android:id="@+id/tv_setting_about"
            style="@style/tv_setting_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/news_cate_arr"
            android:text="@string/tv_setting_about_text"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#11000000"/>

        <Button
            android:id="@+id/btn_setting_exit"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_setting_bg"
            android:text="退出"
            android:textColor="@android:color/holo_red_dark"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_setting_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/tv_setting_version"
        android:textSize="14sp"/>
</RelativeLayout>